--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "PORT=3333 react-scripts start",
-    "build": "react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && PORT=3333 react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
