--- a/public/vercel.json
+++ b/public/vercel.json
@@ -9,11 +9,11 @@
         },
         {
           "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, PATCH, DELETE, OPTIONS"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+          "value": "*"
         }
       ]
     }
