--- a/public/package.json
+++ b/public/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1"
+
   }
 }
